# assista-crab

./: .envrc  .gitignore  Cargo.toml
src/: chatbot.rs  intent_detector.rs  intent_router.rs  lib.rs  main.rs  model_traits.rs  openai.rs  prebuilt.rs  similarity.rs
src/intent_detector/: intent_detector.rs  zeroshot.rs
src/openai/: auth.rs  completion.rs  embedding.rs
src/openai/completion/: client.rs  config.rs
src/openai/embedding/: client.rs  config.rs  constants.rs
src/pipeline/: pipeline.rs
src/search/: search_engine.rs
tests/: openai.rs
