[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
hyper = "0.14.23"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.25.0"
tokio-serde = "0.8.0"
